<resources>
    <string name="app_name">Tp</string>
    <string name="et_phoneNumber_value">请输入手机号码</string>
    <string name="et_passWord_value">请输入密码</string>
    <string name="forget_value">忘记密码？</string>
    <string name="login_value">登陆</string>
    <string name="register_value">注册</string>
    <string name="btn_postimage_value">上传头像</string>
    <string name="btn_sendCode_value">发送验证码</string>
    <string name="et_sendCode_value">请输入你的手机号</string>
    <string name="btn_sure_value">确认</string>
    <string name="et_userName_value">请输入用户名</string>
    <string name="et_surepassword_value">请确认密码</string>
    <string name="tv_1_value">请选择职业</string>
    <string name="radiobtn1_value">学生</string>
    <string name="radiobtn2_value">全职教师</string>
    <string name="radiobtn3_value">兼职教师</string>
    <string name="radiobtn4_value">大学生教师</string>
    <string name="et_code_value">请输入验证码</string>
</resources>
