<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/image"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@mipmap/ic_launcher"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_phone"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_below="@+id/image"
        android:src="@mipmap/icon_user"/>

    <EditText
        android:id="@+id/et_phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:layout_toRightOf="@+id/iv_phone"
        android:hint="@string/et_phoneNumber_value"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"/>

    <ImageView
        android:id="@+id/iv_password"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_below="@+id/iv_phone"
        android:src="@mipmap/icon_password"/>

    <EditText
        android:id="@+id/et_passWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_phoneNumber"
        android:layout_toRightOf="@+id/iv_password"
        android:hint="@string/et_passWord_value"
        android:inputType="textPassword"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/forget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_passWord"
        android:gravity="right"
        android:text="@string/forget_value"
        android:textColor="@color/material_blue_grey_800"
        android:textSize="15sp"/>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forget"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login_value"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/register_value"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/lg_progressbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_layout"
        android:visibility="gone"/>
</RelativeLayout>
